name: redissession
version: 0.0.0
license: BSD3
license-file: LICENSE
author: Tom Streller
maintainer: Tom Streller
synopsis: Redis-Powered Sessions for Haskell
category: Database
stability: experimental
cabal-version: >= 1.6
build-type: Simple
homepage: https://github.com/scan/redissession
source-repository head
  type: git
  location: https://scan@github.com/scan/redissession.git

library
  build-depends: base >= 4 && < 5, mtl, time, bytestring >= 0.9, redis >= 0.12, cookie, binary, pool-conduit, entropy, pureMD5, yesod-core >= 1.0, wai
  exposed-modules: Web.RedisSession, Yesod.Session.Redis
